[package]
name = "ggt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version="1.0.163", features = ["derive"]}
